change in mobile responsive

--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -4,12 +4,19 @@
 body {
      overflow-x: hidden; /* Hide scrollbars */
  }
- .video-head {
-    top: 31%;
-    left: 31%;
-    position: relative;
-    width: 80%;
+ .logo-image{
+   height: 70%;
+   width: 70%;
+   margin: auto;
+   display: flex;
  }
+ .homepage-video{
+   width: 90%;
+ }
+ #wrapper {
+   padding: 100px;
+ }
+
  .video-head>h1 {
     font-size: 72px;
     font-family: PublicoHeadline-Bold-Web;
@@ -67,6 +74,19 @@ body {
     align-items: flex-start;
     margin-bottom: 60px;
  }
+ #div-center{
+   width: 35%;
+   margin: auto;
+}
+.price-parent{
+   display: grid;
+   width: 80%;
+   margin: auto;
+   grid-template-columns: repeat(4,1fr);
+   grid-template-rows: repeat(1, 600px);
+   gap: 25px;
+   margin-top: 80px;
+}
  .container-el {
     display: flex;
     justify-content: space-between;
@@ -126,6 +146,168 @@ body {
 }
 .dropdown-item{
    margin-top: 5px;
+}
+       
+.email-head {
+   width: 40%;
+   margin: auto;
+}
+.email-head h1 {
+   font-family: PublicoHeadline-Bold-Web;
+   font-weight: bold;
+   font-size: 45px;
+}
+.email-img {
+   width: 80%;
+   margin: auto;
+   margin-top: 50px;
+   margin-bottom: 100px;
+}
+.email-section{
+   background-color: #f1efee;
+   padding-bottom: 100px;
+}
+.email-accordian{
+   width: 80%;
+   margin: auto;
+}
+.email-accord-head {
+   width: 40%;
+   padding-top: 50px;
+}
+.communicate-image{
+   width: 80%;
+}
+.communicate-text{
+   width: 50%;
+}
+.right-align-img{
+   text-align: end;
+}
+.sales-crm-image{
+   height: 80%;
+   width: 70%;
+}
+.crm-bussiness-img {
+   height: 90%;
+   width: 70%;
+}
+.crm-head{
+   width: 70%;
+   margin: auto;
+   margin-top: 70px;
+}
+.marketing-stategy{
+   width: 40%;
+   margin: auto;
+   margin-top: 100px;
+}
+.random-img{
+   background-image: url(https://www.sendinblue.com/wp-content/themes/sendinblue2019/assets/images/marketing-newsletter/form-background.png);
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: 100%;
+   padding-bottom: 40px;
+   height: 400px;
+}
+.ready-merketing-digit {
+   margin: auto;
+   width: 60%;
+   margin-top: 100px;
+}
+@media all and (min-width: 320px) and (max-width: 767px) {
+   .home-tool{
+      width: 100%;
+      flex-direction: column
+   }
+   .home-head>div>h3{
+      margin-bottom: 30px;
+   }
+   .rating-image{
+      max-width: 300px;
+   }
+   .video-head{
+      top: 0%;
+      left: 15%;
+      display: flex;
+      flex-direction: column;
+   }
+   #div-center{
+      width: 70%;
+   }
+   .price-parent{
+      grid-template-columns: repeat(1,1fr);
+   }
+   .email-head {
+      width: 80%;
+      margin: auto;
+   }
+   .email-head h1 {
+      font-family: PublicoHeadline-Bold-Web;
+      font-weight: bold;
+      font-size: 35px;
+   }
+   .email-img {
+      width: 80%;
+      margin: auto;
+      margin-top: 50px;
+      margin-bottom: 100px;
+   }
+   .email-section{
+      background-color: #f1efee;
+      padding-bottom: 100px;
+   }
+   .email-accordian{
+      width: 80%;
+      margin: auto;
+   }
+   .email-accord-head {
+      width: 70%;
+      padding-top: 50px;
+   }
+   .communicate-image{
+      width: 80%;
+      margin-top: 30px;
+      margin-bottom: 20px;
+   }
+   .car-image {
+      display: flex;
+      justify-content: center;
+   }
+   .communicate-text{
+      width: 100%;
+   }
+   .right-align-img{
+      text-align: center;
+  }
+  .sales-crm-image{
+   display: flex;
+   justify-content: center;
+   width: 80%;
+   margin: auto;
+  }
+  .crm-bussiness-img{
+   margin: auto;
+   display: flex;
+  }
+  .crm-head{
+   width: 80%;
+  }
+  .marketing-stategy{
+   width: 80%;
+   }
+   .random-img{
+      margin-top: 20px;
+   }
+   .ready-merketing-digit {
+      margin: auto;
+      width: 90%;
+  }
+  .footer-logo{
+   display: flex;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
  
